--- a/public/dashboard/css/argon-dashboard.css
+++ b/public/dashboard/css/argon-dashboard.css
@@ -24683,7 +24683,7 @@ hr.horizontal.gray-light {
 }
 
 .navbar-vertical.bg-white .navbar-nav>.nav-item .nav-link.active {
-  background-color: #f6f9fc;
+  background-color: #56abff;
   box-shadow: none;
 }
 
