--- a/resources/views/partials/navbar.twig
+++ b/resources/views/partials/navbar.twig
@@ -44,7 +44,7 @@
                             <a class="dropdown-item border-radius-md" href="javascript:;">
                                 <div class="d-flex py-1">
                                     <div class="my-auto">
-                                        <img src="{{ base_url }}/img/team-2.jpg" class="avatar avatar-sm  me-3 ">
+                                        <img src="{{ base_url }}/dashboard/img/team-2.jpg" class="avatar avatar-sm  me-3 ">
                                     </div>
                                     <div class="d-flex flex-column justify-content-center">
                                         <h6 class="text-sm font-weight-normal mb-1">
@@ -62,7 +62,7 @@
                             <a class="dropdown-item border-radius-md" href="javascript:;">
                                 <div class="d-flex py-1">
                                     <div class="my-auto">
-                                        <img src="{{ base_url }}/img/small-logos/logo-spotify.svg"
+                                        <img src="{{ base_url }}/Assets/icon.png"
                                             class="avatar avatar-sm bg-gradient-dark  me-3 ">
                                     </div>
                                     <div class="d-flex flex-column justify-content-center">
