--- a/resources/views/partials/sidebar.twig
+++ b/resources/views/partials/sidebar.twig
@@ -10,7 +10,12 @@
     <div class="collapse navbar-collapse  w-auto " id="sidenav-collapse-main">
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a class="nav-link active" href="../pages/dashboard.html">
+                <a class="nav-link
+                {% if (title == 'Dashboard') %}
+                    active
+                {% endif %}
+                "
+                    href="../pages/dashboard.html">
                     <div
                         class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center justify-content-center">
                         <i class="ni ni-tv-2 text-dark text-sm opacity-10"></i>
@@ -19,7 +24,12 @@
                 </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link " href="">
+                <a class="nav-link 
+                    {% if (title == 'Manajemen Sekolah') %}
+                        active
+                    {% endif %}
+                "
+                    href="">
                     <div
                         class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center justify-content-center">
                         <i class="bi bi-person-video3 text-dark text-sm opacity-10"></i>
@@ -28,7 +38,11 @@
                 </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link " href="">
+                <a class="nav-link 
+                {% if (title == 'Manajemen Siswa') %}
+                    active
+                {% endif %}
+                " href="">
                     <div
                         class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center justify-content-center">
                         <i class="bi bi-people-fill text-dark text-sm opacity-10"></i>
@@ -37,7 +51,11 @@
                 </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link " href="">
+                <a class="nav-link 
+                {% if (title == 'Manajemen Admin') %}
+                    active
+                {% endif %}
+                " href="">
                     <div
                         class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center justify-content-center">
                         <i class="bi bi-person-fill-gear text-dark text-sm opacity-10"></i>
@@ -45,7 +63,7 @@
                     <span class="nav-link-text ms-1">Manajemen Admin</span>
                 </a>
             </li>
-           
+
         </ul>
     </div>
 
