--- a/resources/views/partials/sidebar.twig
+++ b/resources/views/partials/sidebar.twig
@@ -15,7 +15,7 @@
                     active
                 {% endif %}
                 "
-                    href="../pages/dashboard.html">
+                    href="{{ base_url }}">
                     <div
                         class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center justify-content-center">
                         <i class="ni ni-tv-2 text-dark text-sm opacity-10"></i>
@@ -29,7 +29,7 @@
                         active
                     {% endif %}
                 "
-                    href="">
+                    href="{{ base_url }}/school">
                     <div
                         class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center justify-content-center">
                         <i class="bi bi-person-video3 text-dark text-sm opacity-10"></i>
