crud Manajemen Siswa

--- a/resources/views/partials/sidebar.twig
+++ b/resources/views/partials/sidebar.twig
@@ -42,7 +42,7 @@
                 {% if (title == 'Manajemen Siswa') %}
                     active
                 {% endif %}
-                " href="">
+                " href="{{ base_url }}/student">
                     <div
                         class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center justify-content-center">
                         <i class="bi bi-people-fill text-dark text-sm opacity-10"></i>
