--- a/resources/views/partials/sidebar.twig
+++ b/resources/views/partials/sidebar.twig
@@ -55,7 +55,7 @@
                 {% if (title == 'Manajemen Admin') %}
                     active
                 {% endif %}
-                " href="">
+                " href="{{ base_url }}/admin">
                     <div
                         class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center justify-content-center">
                         <i class="bi bi-person-fill-gear text-dark text-sm opacity-10"></i>
